# src/controllers/auth.controller.ts
@@ -1,6 +1,8 @@
-import { Body, Controller, Post, Route } from "tsoa";
+import { Body, Controller, Post, Request, Route } from "tsoa";
 import { AuthService } from "../services/auth.service";
-import { SignInRequest, SignUpRequest, ConfirmSignUpRequest } from "./types/auth-request.type";
+import { SignInRequest, SignUpRequest, ConfirmSignUpRequest, SigInResponse } from "./types/auth-request.type";
+import { setCookies } from "../utils/cookies";
+import express from "express"
 @Route("/v1/auth")
 export class AuthController extends Controller {
     private authService: AuthService;
@@ -28,13 +30,21 @@ export class AuthController extends Controller {
         }
     }
     @Post("/signinv2")
-    public async signInV2(@Body() requestBody: SignInRequest){
+    public async signInV2(@Body() requestBody: SignInRequest,@Request() req:express.Request): Promise<SigInResponse> {
         try {
-            const response = await this.authService.signInV2(requestBody.email,requestBody.password);
-            return response;
-        } catch (error: any) {
+            const response = await this.authService.signInV2(requestBody.email, requestBody.password);
+            const accessToken = response?.accessToken;
+            const refreshToken = response?.accessToken;
+            const idToken = response?.idToken;
+            const res = (req as any).res as express.Response
+            //Set accessToken ,refreshToken,idToken to cookie
+            setCookies(res,'access_token',accessToken!);
+            setCookies(res,'idToken',idToken!);
+            setCookies(res,'refreshToken',refreshToken!)
+            return response!;
+        } catch (error: unknown) {
             this.setStatus(401);
-            return {message: error.message};
+            throw new Error(error as any);
         }
     }
 }
