# src/controllers/types/auth-request.type.ts
@@ -7,6 +7,12 @@ export interface SignInRequest{
     password: string;
     email: string;
 }
+export interface SigInResponse{
+    email: string;
+    accessToken: string;
+    refreshToken: string;
+    idToken: string;
+}
 export interface ConfirmSignUpRequest{
     email: string;
     confirmationCode: string;
